--- a/package.json
+++ b/package.json
@@ -10,9 +10,19 @@
         "production": "mix --production"
     },
     "devDependencies": {
+        "autoprefixer": "^10.4.5",
         "axios": "^0.25",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
-        "postcss": "^8.1.14"
+        "postcss": "^8.4.12",
+        "tailwindcss": "^3.0.24"
+    },
+    "dependencies": {
+        "@fortawesome/fontawesome-svg-core": "^6.1.1",
+        "@fortawesome/free-brands-svg-icons": "^6.1.1",
+        "@fortawesome/free-solid-svg-icons": "^6.1.1",
+        "@fortawesome/react-fontawesome": "^0.1.18",
+        "alpinejs": "^3.10.2",
+        "daisyui": "^2.14.2"
     }
 }
